src/objects/Gumutindo_Targets__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <label>Metric Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gumutindo Targets</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GT-{0000}</displayFormat>
        <label>Gumutindo Targets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gumutindo Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>